<?xml version="1.0" encoding="utf-8"?>


<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/containers"
        android:id="@+id/container"
         android:focusable="true"
         android:focusableInTouchMode="true"
         xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.systemtechnology.design.components.CollapseChosePhoto
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_strong"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"    />


    <android.support.v4.widget.NestedScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:id="@+id/nested_scroll_layout"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_height="match_parent"
            android:background="@color/blue_weak"
            android:clipToPadding="false"
            android:paddingBottom="60dp"
            android:fillViewport="true"
            android:paddingTop="10dp">

        <android.support.constraint.ConstraintLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp">


            <TextView
                    android:id="@+id/textview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/text_view_title"
                    android:text="..."
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"/>

            <EditText
                    android:id="@+id/edit_text_name"
                    android:layout_width="match_parent"
                    android:hint="@string/activity_update_or_register_hint_1"
                    style="@style/edit_text_default"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_height="54dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    android:inputType="textPersonName"
                    android:maxLength="100"
                    android:singleLine="true"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/textview"/>


            <EditText
                    android:id="@+id/edit_text_cpf"
                    android:layout_width="match_parent"
                    android:hint="@string/activity_update_or_register_hint_2"
                    android:maxLength="15"
                    style="@style/edit_text_default"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_height="54dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    android:inputType="number"
                    android:singleLine="true"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/edit_text_name"/>


            <EditText
                    android:id="@+id/edit_text_email"
                    android:layout_width="match_parent"
                    android:hint="@string/activity_developer_hint_3"
                    android:maxLength="60"
                    style="@style/edit_text_default"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_height="54dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/edit_text_cpf"/>

            <EditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:hint="@string/activity_developer_hint_4"
                    android:maxLength="15"
                    style="@style/edit_text_default"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_height="54dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/edit_text_email"/>


            <android.support.v7.widget.CardView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:paddingBottom="50dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:id="@+id/card_view"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_marginBottom="20dp"
                    app:cardCornerRadius="4dp"
                    app:cardBackgroundColor="@color/blue_weak"
                    app:cardElevation="3dp"
                    app:cardMaxElevation="3dp"
                    app:cardPreventCornerOverlap="false"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="32dp"
                    android:layout_marginStart="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/edit_text_password">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center"
                >

                    <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_home_48dp"
                            android:layout_margin="5dp"
                            />

                    <TextView
                            android:id="@+id/text_view_photo"
                            style="@style/text_view_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="..."
                            android:paddingRight="10dp"/>

                </LinearLayout>


            </android.support.v7.widget.CardView>


        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

    <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            style="@style/button_default"
            android:layout_gravity="bottom"
            android:text="Cadastrar"
    />

</android.support.design.widget.CoordinatorLayout>
