<resources>
    <string name="app_name">DevRegister</string>

    <string name="form_cep_not_found">           CEP não encontrado</string>
    <string name="form_cep_incorrect">           Preencha o CEP inteiro</string>
    <string name="form_cep_error_number_street"> Digite o número da residência</string>
    <string name="form_client_error_name">       Digite o nome inteiro corretamente</string>
    <string name="form_client_error_cpf">        Digite o CPF corretamente</string>
    <string name="form_client_error_address">    Informe o endereço</string>
    <string name="activity_get_address_cep_title">CEP</string>

    <string name="update_register_inserting_title">Cadastre um novo desenvolvedor preenchendo os campos abaixo</string>
    <string name="update_register_inserting_photo">Adicionar Endereço</string>
    <string name="update_register_inserting_button">Adicionar</string>

    <string name="update_register_updating_title">Atualize aqui seus desenvolvedores sempre que precisar</string>
    <string name="update_register_updating_photo">Modificar Endereço</string>
    <string name="update_register_updating_button">Atualizar</string>

    <string name="activity_address_confirm_title">Agora precisamos apenas confirmar o número de sua residência e
        complementos
    </string>
    <string name="activity_address_confirm_hint_1">Rua</string>
    <string name="activity_address_confirm_hint_2">Número</string>
    <string name="activity_address_confirm_hint_3">Complemento</string>
    <string name="activity_address_confirm_button">Confirmar Endereço</string>

    <string name="activity_update_or_register_hint_1">Nome Completo</string>
    <string name="activity_update_or_register_hint_2">CPF</string>

    <string name="holder_none_devs_yet_title">Cadastre seu primeiro desenvolvedor para começar!</string>

    <string name="form_register_dev_title_toolbar">Cadastrar Desenvolvedor</string>
    <string name="form_register_dev_title_toolbar_update">Atualizar atividade</string>
    <string name="form_register_dev_title_toolbar_delivered">Atividade entregue</string>

    <string name="activity_developer_hint_3">Email</string>
    <string name="activity_developer_hint_4">Senha</string>
    <string name="form_client_error_photo">Selecione alguma imagem para continuar</string>
    <string name="form_client_error_email">Digite um E-mail válido</string>
    <string name="form_client_error_password_size">Digite uma senha maior</string>
    <string name="activity_dev_status_stopped">Atividade Parada</string>
    <string name="activity_dev_status_delivered">Atividade Entregue</string>
    <string name="activity_dev_status_executing">Atividade Executando</string>
    <string name="activity_dev_delivered_date_start_msg">Entregue em</string>
    <string name="activity_dev_delivery_prevision">Previsto para</string>
    <string name="activity_dev_requester">Solicitado por</string>
    <string name="activity_register_activity_title">Criar Atividade</string>
    <string name="activity_register_activity_form_requester">Solicitante</string>
    <string name="activity_register_activity_form_description">Descrição da atividade</string>
    <string name="activity_register_activity_form_delivery">Entrega da atividade</string>
    <string name="activity_register_activity_form_title">Adicione uma atividade para o desenvolvedor</string>
    <string name="activity_register_activity_form_button">Adicionar</string>
    <string name="activity_dev_error_form_date">Selecione uma data de entrega da atividade</string>
    <string name="activity_dev_error_form_description_length">Crie uma descrição detalhada</string>
    <string name="activity_dev_error_requester">Informe quem solicitou a atividade</string>

    <string name="holder_none_activity_get">Crie a primeira atividade para este desenvolvedor</string>


    <string name="activities">Atividades</string>
    <string name="delivery_at">Entrega em</string>
    <string name="activity_register_activity_form_title_updating">Atualize a atividade</string>
    <string name="activity_register_activity_form_button_updating">Atualizar</string>
    <string name="activity_register_activity_form_title_delivered">Atividade finalizada</string>
    <string name="activity_login_form_error_email_or_cpf">Email ou CPF inválidos</string>
    <string name="activity_login_form_error_password">Digite uma senha válida</string>

</resources>
